add findbugs to gradle build and address issues
issues were with returning date object directly in accessors and using new Long() instead of Long.valueOf()